# data_ravers_utils

./: README.md  pyproject.toml  requirements.txt  setup.py
data_ravers_utils/: __init__.py  eda_utils.py  encoding_categorical.py  file_handler.py  kaggle_loader.py  model_rf_classifier.py  model_rf_regressor.py  probability.py  text_features.py  visualization.py
docs/: poetry.md  pytest.md  setup.md
tests/: test_eda_utils.py  test_file_handler.py  test_model_train.py  test_probability.py  test_visualization.py
