[project]
name = "data-ravers-utils"
version = "0.0.1"
description = "Data Science toolkit"
authors = [
    {name = "Bubblegum Doubledrops",email = "dataravers@gmail.com"}
]
license = {text = "Attribution-NonCommercial 4.0 International"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.3.5)",
    "pandas (>=2.2.2)",
    "kagglehub (>=0.3.10)",
    "numpy (>=1.26.4)",
    "matplotlib (>=3.9.2)",
    "seaborn (>=0.13.2)",
    "matplotlib-venn (>=1.1.2)",
    "toml (>=0.10.2,<0.11.0)",
    "pytest (>=8.3.5,<9.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
